--- a/Unity/HybridProject/HybridProject.csproj
+++ b/Unity/HybridProject/HybridProject.csproj
@@ -56,7 +56,6 @@
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <PropertyGroup>
     <PostBuildEvent>echo %25date%25 %25time%25
-copy "$(ProjectDir)bin\HybridProject.dll" "$(ProjectDir)..\Assets\Builds\HotUpdate\Assembly\HybridProject.bytes"
-copy "$(ProjectDir)bin\HybridProject.pdb" "$(ProjectDir)..\Assets\Builds\HotUpdate\Assembly\HybridProject_pdb.bytes"</PostBuildEvent>
+copy "$(ProjectDir)bin\HybridProject.dll" "$(ProjectDir)..\Assets\Builds\HotUpdate\Assembly\HybridProject.bytes"</PostBuildEvent>
   </PropertyGroup>
 </Project>
